--------------------------------------------------------------------------------
drkns 2025-04-29 19:42:21+01:00 - build 6471

1. From Shmuel: crash on incorrect data from plugin.

--------------------------------------------------------------------------------
johnd0e 2025-04-29 18:27:59+02:00 - build 6470

1. Fix incorrect item selection when opening combobox.

--------------------------------------------------------------------------------
drkns 2025-04-25 22:04:11+01:00 - build 6469

1. Correction of 1434: restore trailing spaces trimming in command line history.

--------------------------------------------------------------------------------
drkns 2025-04-24 17:44:08+01:00 - build 6468

1. gh-940: Editor Find All does not work.

--------------------------------------------------------------------------------
drkns 2025-04-22 21:28:12+01:00 - build 6467

1. Fix replace in far:regex.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-04-22 02:04:56+01:00 - build 6466

1. far:regex: selecting matches in the list selects the corresponding part of the test string.

--------------------------------------------------------------------------------
drkns 2025-04-21 12:47:09+01:00 - build 6465

1. Exception handling improvements.

2. Regex improvements:
   - Replace stops on unknown numbered or named groups.
   - Minor far:regex UI improvements.
   - Minor RECTL_GETNAMEDGROUPS changes:
     - Returns all compiled groups, not only found ones.
     - Results are valid till the next compile, not search/match.

--------------------------------------------------------------------------------
drkns 2025-04-20 21:28:54+01:00 - build 6464

1. Fix inconsistency in regex replace.
   Replace not found named groups with empty strings, same as not found numbered groups.

--------------------------------------------------------------------------------
drkns 2025-04-20 02:08:46+01:00 - build 6463
