@@ -1738,7 +1738,7 @@ void Dialog::ShowDialog(size_t ID)
 					else if (CX1 != -1 && CX2 > CX1)
 					{
 						MaxWidth = CX2 - CX1 + 1;
-						size_t MaxWidthFixed = MaxWidth + (Item.Flags & DIF_SHOWAMPERSAND ? 0 : strStr.size() - HiStrlen(strStr));
+						size_t MaxWidthFixed = MaxWidth + (Item.Flags & DIF_SHOWAMPERSAND ? 0 : visual_string_length(strStr) - HiStrlen(strStr));
 
 						if (Item.Flags & DIF_RIGHTTEXT)
 							inplace::fit_to_right(strStr, MaxWidthFixed);
